wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080  # The port the app is listening on inside the container
  type: LoadBalancer  # This exposes the service externally if using a cloud provider like GCP/AWS
